[tool.poetry]
name = "isotl"
version = "0.1.0"
description = "isotl by wewejay"
authors = ["wewejay <icedotbee@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
peewee = "^3.17.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
isotl = "isotl.cli:cli"